# dilag

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts  wait-for-release.sh
.beads/: issues.jsonl
.github/workflows/: release.yml
.opencode/command/: release.md
apps/desktop/: README.md  bump.config.ts  happydom.ts  index.html  package.json  vite.config.ts
apps/desktop/docs/: ci.md  icons.md  platform.md
apps/desktop/scripts/: fetch-opencode.ts  sync-version-from-pkg.ts  test-opencode-sse.ts  test-opencode-v2.ts  test-opencode-v4.ts  test-opencode-v5.ts  test-opencode.ts
apps/desktop/src/: index.css  main.tsx  routeTree.gen.ts  router.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/assets/: designer-common.md  mobile-designer-prompt.md  web-designer-prompt.md
apps/desktop/src-tauri/assets/examples/mobile/: finance.html  wellness.html
apps/desktop/src-tauri/assets/examples/web/: editorial.html  saas-dashboard.html
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: AGENTS.md  app_info.rs  capture.rs  designs.rs  lib.rs  licensing.rs  main.rs  menu.rs  opencode.rs  screen_validator.rs  sessions.rs  state.rs  theme.rs  zoom.rs
apps/web/: .env.example  AGENTS.md  README.md  drizzle.config.ts  next.config.ts  package.json
apps/web/drizzle/: 0000_lying_falcon.sql
apps/web/src/: middleware.ts  proxy.ts
docs/: architecture.md  ci.md  platform.md
scripts/: sync-version.ts  test-opencode-final.ts  test-opencode-v3.ts  test-opencode-with-model.ts
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: designer-prompt.md  solar-icons-skill.md  web-designer-prompt.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_info.rs  designs.rs  error.rs  lib.rs  licensing.rs  menu.rs  opencode.rs  paths.rs  sessions.rs  state.rs  vite.rs
src-tauri/templates/web-project/: AGENTS.md  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/components/: theme-provider.tsx
src/components/ai-elements/: conversation.tsx  message-duration.tsx  message.tsx  prompt-input.tsx  question-prompt.tsx
src/components/blocks/: agent-selector-button.tsx  app-sidebar.tsx  auth-settings.tsx  browser-frame.tsx  chat-view.tsx  code-preview.tsx  debug-pane.tsx  design-canvas.tsx  design-code-view.tsx  design-preview-frame.tsx  design-preview.tsx  draggable-screen.tsx  file-tree.tsx  file-viewer.tsx  iphone-frame.tsx  (+14 more)
src/context/: design-mode-store.ts  global-events.tsx  menu-events.tsx  notification.tsx  session-store.test.ts  session-store.tsx  updater-context.tsx
src/hooks/: use-chat-interface.ts  use-designs.ts  use-designs.tsx  use-elapsed-time.ts  use-models.ts  use-models.tsx  use-session-data.ts  use-sessions.test.ts  use-sessions.ts  use-sessions.tsx  use-updater.ts
src/lib/: design-export.ts  event-guards.ts  file-utils.ts  opencode.ts  tool-registry.tsx
src/routes/: __root.tsx  index.lazy.tsx  index.tsx  projects.lazy.tsx  projects.tsx  settings.lazy.tsx  settings.tsx  studio.$sessionId.lazy.tsx  studio.$sessionId.tsx
(+198 files in other folders)
