[package]
name = "dilag"
# Version reset to 0.0.1 for licensing system introduction.
# Previous versions (0.2.x) were pre-release/internal builds.
# Version will increment from here following semver after initial public release.
version = "0.3.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dilag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
dirs = "5"
tokio = { version = "1", features = ["sync", "time"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
machine-uid = "0.5"

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSColor", "NSWindow", "NSResponder", "NSImage", "NSApplication", "NSBitmapImageRep"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSURL", "NSDictionary", "NSGeometry"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKSnapshotConfiguration", "WKNavigation", "WKNavigationDelegate"] }
block2 = "0.6"

[dev-dependencies]
tempfile = "3"

