[package]
name = "dilag"
version = "0.5.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dilag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
dirs = "5"
tokio = { version = "1", features = ["sync", "time"] }
regex = "1"
tauri-plugin-dialog = "2.5.0"
tauri-plugin-fs = { version = "2.4.5", features = ["watch"] }

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSColor", "NSWindow", "NSResponder"] }
objc2-foundation = "0.3"

[dev-dependencies]
tempfile = "3"
